[package]
name = "edge-btf-module-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ckks-engine = "4.0.0"
hex = "0.4.3"
wasm-bindgen = "0.2.100"


[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
